--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="myApp">
+
 <head>
-  <meta charset="utf-8">
-  <title>myApp</title>
+    <meta charset="utf-8">
+    <title>myApp</title>
 
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="stylesheets/main.css">
 </head>
+
 <body>
-  <div class="container">
+    <div class="container">
 
-    <h1>Hello {{ name }}!</h1>
-    <input type="text" ng-model="name" />
+        <h1>Hello {{ name }}!</h1>
+        <input type="text" ng-model="name" />
 
-  </div>
-  <!-- 3rd-Party Libs -->
-  <script src="node_modules/jquery/dist/jquery.js"></script>
-  <script src="node_modules/angular/angular.js"></script>
-  <script src="node_modules/@angular/router/angular1/ng_route_shim.js"></script>
-  <script src="node_modules/@angular/router/angular1/angular_1_router.js"></script>
-  <!-- Application Files -->
+        <hr>
+        
+        <colorpicker red="0" alpha="alpha"></colorpicker>
+        <colorpicker alpha="alpha"></colorpicker>
+        <colorpicker alpha="alpha"></colorpicker>
+        
+        <hr>
+
+    </div>
+    <!-- 3rd-Party Libs -->
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/angular/angular.js"></script>
+    <script src="node_modules/@angular/router/angular1/ng_route_shim.js"></script>
+    <script src="node_modules/@angular/router/angular1/angular_1_router.js"></script>
+    <!-- Application Files -->
+    <script src="app.js"></script>
+    <script src="components/colorpicker/colorpicker.component.js"></script>
 </body>
+
 </html>
